--- a/Final_project/Style.css
+++ b/Final_project/Style.css
@@ -28,7 +28,7 @@ h1{
 
 h2{
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
 }
 
 .social-media{
@@ -201,7 +201,7 @@ a:hover{
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 3rem 0;
 }
@@ -217,17 +217,26 @@ a:hover{
     height: 300px;
     width: 400px;
     margin: 3rem 0 0;
-    background-image: url('./pcrom.jpg');
+    background-image: url('./pcroomanime.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    filter: grayscale(2);
+    filter: grayscale(1.5);
     color: white;
     cursor: pointer;
     transition: 0.3s;
+}
+
+.card-wrapper{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .card-text{
@@ -249,7 +258,7 @@ a:hover{
 }
 
 .card-wrapper h2{
-    font-size: 40px;
+    font-size: 50px;
     text-transform: uppercase;
     letter-spacing: 4px;
     margin: 0;
@@ -273,4 +282,59 @@ a:hover{
     opacity: 1;
     width: 350px;
     height: 250px;
+}
+
+.card:hover > .card-wrapper p{
+    font-size: 20px;
+    opacity: 1;
+    visibility: visible;
+}
+
+/* FOOTER */
+
+.footer{
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #085078;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 800px){
+    .social-media{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container{
+        margin-top: 0;
+    }
+
+    .card-container{
+        flex-direction: column;
+    }
+
+    .container .card-container:nth-child(1),
+    .container .card-container:nth-child(3){
+        flex-direction: column-reverse;
+    }
+
+    .card{
+        height: 250px;
+        width: 250px;
+    }
+
+    .card-text{
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .card:hover > .card-wrapper::before{
+        height: 190px;
+        width: 190px;
+    }
 }
